{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 36,
  "lineage": "dd62fc19-9530-bd4d-1783-ee4ccae3ded3",
  "resources": [
    {
      "module": "module.bastion_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac44e930f88d9df5",
            "association_id": "eipassoc-0591db5daa47fa68a",
            "domain": "vpc",
            "id": "eipalloc-0ac44e930f88d9df5",
            "instance": "i-090488f9f09cce673",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b50acfc03c301b8e",
            "private_dns": "ip-10-0-1-71.ap-south-1.compute.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-13-235-234-236.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.234.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.TF_key",
            "module.aws_key_pair.tls_private_key.rsa",
            "module.bastion_instance.aws_instance.bastion_instance",
            "module.bastion_instance.aws_security_group.bastion_sg",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5ac53f63249fba0",
            "arn": "arn:aws:ec2:ap-south-1:055953482837:instance/i-090488f9f09cce673",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090488f9f09cce673",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b50acfc03c301b8e",
            "private_dns": "ip-10-0-1-71.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0baf83f55408ddc32",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0914ba30cbfb35301",
            "tags": {
              "Name": "devopsofworld-dev-bastion-Host"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-bastion-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08081269fc7f13c56"
            ]
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.TF_key",
            "module.aws_key_pair.tls_private_key.rsa",
            "module.bastion_instance.aws_security_group.bastion_sg",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:security-group/sg-08081269fc7f13c56",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08081269fc7f13c56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devopsofworld-dev-bastion-sg20231016065455648300000002",
            "name_prefix": "devopsofworld-dev-bastion-sg",
            "owner_id": "055953482837",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0243a4bded57e2b68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081170ce9e58e435a",
            "domain": "vpc",
            "id": "eipalloc-081170ce9e58e435a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-232-39-135.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.39.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:internet-gateway/igw-0ab3ef4b3189dccb4",
            "id": "igw-0ab3ef4b3189dccb4",
            "owner_id": "055953482837",
            "tags": {
              "Name": "devopsofworld-dev-Public-Internet-Gateway"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-Public-Internet-Gateway"
            },
            "vpc_id": "vpc-0243a4bded57e2b68"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081170ce9e58e435a",
            "association_id": "eipassoc-07a7876fdf1899532",
            "connectivity_type": "public",
            "id": "nat-06c7fcef9236dbf62",
            "network_interface_id": "eni-05bfedc7152790b16",
            "private_ip": "10.0.1.70",
            "public_ip": "13.232.39.135",
            "subnet_id": "subnet-0914ba30cbfb35301",
            "tags": {
              "Name": "devopsofworld-dev-NAT-Gateway"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-NAT-Gateway"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ab3ef4b3189dccb4",
            "id": "r-rtb-095e92ee7bee2f0db1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095e92ee7bee2f0db",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_internet_gateway",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eca69af7e68224831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06c7fcef9236dbf62",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eca69af7e6822483",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.my_eip",
            "module.my_vpc.aws_nat_gateway.my_nat_gateway",
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:route-table/rtb-0eca69af7e6822483",
            "id": "rtb-0eca69af7e6822483",
            "owner_id": "055953482837",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devopsofworld-dev-Private-Route-Table"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0243a4bded57e2b68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4362ff4d6069f35",
            "route_table_id": "rtb-0eca69af7e6822483",
            "subnet_id": "subnet-029f0057c4a9ab588"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051276749d3601eb9",
            "route_table_id": "rtb-0eca69af7e6822483",
            "subnet_id": "subnet-035270162da28f1e3"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f842ad438d4fa9bb",
            "route_table_id": "rtb-0eca69af7e6822483",
            "subnet_id": "subnet-0e1053f629c28e46d"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private_route_table",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cea216c803c78fb8",
            "route_table_id": "rtb-095e92ee7bee2f0db",
            "subnet_id": "subnet-0914ba30cbfb35301"
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05283f9658574af5e",
            "route_table_id": "rtb-095e92ee7bee2f0db",
            "subnet_id": "subnet-00dcecc9c4c451d12"
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1dfba322d97be46",
            "route_table_id": "rtb-095e92ee7bee2f0db",
            "subnet_id": "subnet-06e186cd0bbb01c1f"
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:subnet/subnet-029f0057c4a9ab588",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029f0057c4a9ab588",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055953482837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devopsofworld-dev-Private-Subnet-0"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-Private-Subnet-0"
            },
            "vpc_id": "vpc-0243a4bded57e2b68"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:subnet/subnet-035270162da28f1e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035270162da28f1e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055953482837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devopsofworld-dev-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-Private-Subnet-1"
            },
            "vpc_id": "vpc-0243a4bded57e2b68"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:subnet/subnet-0e1053f629c28e46d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1053f629c28e46d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055953482837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devopsofworld-dev-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-Private-Subnet-2"
            },
            "vpc_id": "vpc-0243a4bded57e2b68"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:subnet/subnet-0914ba30cbfb35301",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0914ba30cbfb35301",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055953482837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devopsofworld-dev-Public-Subnet-0"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-Public-Subnet-0"
            },
            "vpc_id": "vpc-0243a4bded57e2b68"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:subnet/subnet-00dcecc9c4c451d12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dcecc9c4c451d12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055953482837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devopsofworld-dev-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-Public-Subnet-1"
            },
            "vpc_id": "vpc-0243a4bded57e2b68"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:subnet/subnet-06e186cd0bbb01c1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e186cd0bbb01c1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055953482837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devopsofworld-dev-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-Public-Subnet-2"
            },
            "vpc_id": "vpc-0243a4bded57e2b68"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:vpc/vpc-0243a4bded57e2b68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0798032b84cbdb6bc",
            "default_route_table_id": "rtb-095e92ee7bee2f0db",
            "default_security_group_id": "sg-05c6deec0de6b86c2",
            "dhcp_options_id": "dopt-0954e827e77470a49",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0243a4bded57e2b68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095e92ee7bee2f0db",
            "owner_id": "055953482837",
            "tags": {
              "Name": "devopsofworld-dev-vpc"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.private_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5ac53f63249fba0",
            "arn": "arn:aws:ec2:ap-south-1:055953482837:instance/i-043bda7ea24aadc79",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043bda7ea24aadc79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebbb8064b5163381",
            "private_dns": "ip-10-0-4-108.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8edb01f87b1fdfc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029f0057c4a9ab588",
            "tags": {
              "Name": "devopsofworld-dev-private-instace"
            },
            "tags_all": {
              "Name": "devopsofworld-dev-private-instace"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0a1089e500b39d6"
            ]
          },
          "dependencies": [
            "module.aws_key_pair.aws_key_pair.TF_key",
            "module.aws_key_pair.tls_private_key.rsa",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private_instance.aws_security_group.private_instance_sg"
          ]
        }
      ]
    },
    {
      "module": "module.private_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:055953482837:security-group/sg-0c0a1089e500b39d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0a1089e500b39d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devopsofworld-dev-private-instance20231016065455632400000001",
            "name_prefix": "devopsofworld-dev-private-instance",
            "owner_id": "055953482837",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0243a4bded57e2b68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}